@@ -1,6 +1,6 @@
 =head1 NAME
 
-Petal::Parser::HTMLWrapper
+Petal::Parser::HTMLWrapper - Fires Petal::Canonicalizer events from HTML
 
 =head1 DESCRIPTION
 
@@ -37,7 +37,6 @@ sub process
     local @MarkedData = ();
     local @NodeStack  = ();
     $data_ref = (ref $data_ref) ? $data_ref : \$data_ref;
-    $data_ref = $self->markup_data_ref ($data_ref);
     
     + Petal::Canonicalizer::StartDocument();
     my $tree = HTML::TreeBuilder->new;
@@ -48,8 +47,9 @@ sub process
     eval
     {
 	$tree->parse ($$data_ref);
+	my @nodes = $tree->guts();
 	$tree->elementify();
-	$self->generate_events ($tree);
+	$self->generate_events ($_) for (@nodes);
     };
     
     @MarkedData = ();
@@ -57,58 +57,6 @@ sub process
     $tree->delete;
     carp $@ if (defined $@ and $@);
 }
-
-
-# markup_data_ref
-
-# HTML::TreeBuilder has a tendancy to fix HTML trees, which is not
-# so good for included files because we don't want the <body>, <html>,
-# etc. tags to be added...
-#
-# This subroutine will mark the exising tags with a 'petal:mark="1"'
-# attribute so that we can throw events only for the marked tags once
-# the HTML will have been parsed by HTML::TreeBuilder.
-#
-# It's a bit contended, but HTML files are usually a big ugly hack so
-# I suppose you should not expect anything clean in a modules that deals
-# with the HTML which is actually out there...
-sub markup_data_ref
-{
-    my $self = shift;
-    my $data_ref = shift;
-    my $p = new HTML::Parser;
-    $p->handler (start => "markup_start", "tagname, attr");
-    $p->handler (end   => "markup_end",   "tagname");
-    $p->handler (text  => "markup_text",  "text");
-    @MarkedData = ();
-    $p->parse ($$data_ref);
-    return \do { join '', @MarkedData };
-}
-
-
-sub markup_start
-{
-    my $tagname = shift;
-    my $attr = shift;
-    $attr->{'petal:mark'} = 1;    
-    $attr = join " ", map { "$_=\"$attr->{$_}\"" } keys %{$attr};
-    push @MarkedData, "<$tagname $attr>";
-}
-
-
-sub markup_end
-{
-    my $tagname = shift;
-    push @MarkedData, "</$tagname>";
-}
-
-
-sub markup_text
-{
-    push @MarkedData, shift;
-}
-
-# /markup_data_ref end
 
 
 # generate_events
@@ -129,36 +77,26 @@ sub generate_events
 	
 	if ($tag eq '~comment')
 	{
-	    text ($tree->attr ('text')) if (generate_events_is_inside_marked_tag());
+	    text ($tree->attr ('text'));
 	}
 	else
 	{
 	    push @NodeStack, $tree;
-	    generate_events_start ($tag, $attr) if (generate_events_is_inside_marked_tag());
+	    generate_events_start ($tag, $attr);
 	    
 	    foreach my $content ($tree->content_list())
 	    {
 		$self->generate_events ($content);
 	    }
 	    
-	    generate_events_end ($tag) if (generate_events_is_inside_marked_tag());
+	    generate_events_end ($tag);
 	    pop (@NodeStack);
 	}
     }
     else
     {
-	generate_events_text ($tree) if (generate_events_is_inside_marked_tag());
+	generate_events_text ($tree);
     }
-}
-
-
-sub generate_events_is_inside_marked_tag
-{
-    foreach (@NodeStack)
-    {
-	return 1 if $_->attr ('petal:mark');
-    }
-    return;
 }
 
 
@@ -192,7 +130,6 @@ sub generate_events_text
     Petal::Canonicalizer::Text();    
 }
 
-# /generate events
 
 1;
 
