@@ -7,15 +7,13 @@ use Petal;
 $loaded = 1;
 print "ok 1\n";
 
-my $template_file = 'register_form.tmpl';
-my $template = new Petal (
-	base_dir => './t/data/multiple_includes',
-	file => $template_file,
-	disk_cache => 0,
-	memory_cache => 0,
-	taint => 1,
-);
+$Petal::BASE_DIR = './t/data/multiple_includes';
+$Petal::DISK_CACHE = 0;
+$Petal::MEMORY_CACHE = 0;
+$Petal::TAINT = 1;
 
+my $template_file = 'register_form.tmpl';
+my $template = new Petal ($template_file);
 
 # $template::PARSER does not work, but $Petal::PARSER does!
 $Petal::PARSER = 'HTML';
