@@ -7,15 +7,13 @@ use Petal;
 $loaded = 1;
 print "ok 1\n";
 
-my $template_file = 'if.xml';
-my $template = new Petal (
-	base_dir => './t/data',
-	file => $template_file,
-	disk_cache => 0,
-	memory_cache => 0,
-	taint => 1,
-);
+$Petal::BASE_DIR = './t/data';
+$Petal::DISK_CACHE = 0;
+$Petal::MEMORY_CACHE = 0;
+$Petal::TAINT = 1;
 
+my $template_file = 'if.xml';
+my $template = new Petal ($template_file);
 
 ($template->process =~ /\<p\>/) ? print "not ok 2\n" : print "ok 2\n";
 ($template->process (error => 'Some error message') =~ /Some error message/) ? print "ok 3\n" : print "not ok 3\n";
@@ -23,14 +21,7 @@ my $template = new Petal (
 
 $Petal::PARSER = 'HTML';
 $template_file = 'if.html';
-$template = new Petal (
-	base_dir => './t/data',
-	file => $template_file,
-	disk_cache => 0,
-	memory_cache => 0,
-	taint => 1,
-);
-
+$template = new Petal ($template_file); 
 
 ($template->process =~ /\<p\>/) ? print "not ok 4\n" : print "ok 4\n";
 ($template->process (error => 'Some error message') =~ /Some error message/) ? print "ok 5\n" : print "not ok 5\n";
