@@ -2,7 +2,10 @@ Revision history for Petal.
 
 0.5
 	- Added tests
-	- Amended the way modifiers work
+	- Modifiers are now 'modifier:' rather than ':modifier' 
+        - Implemented TALES '|'
+        - Implemented TALES '/' (alias for '.')
+
 
 0.4 Thu Jul 25 12:08:03 2002
 	- Added Petal::Hash::Encode_HTML contributed mod
